# beginning_cpp

./: .gitignore  README.md
01_hello_world/source/: premake5.lua
02_hello_classes/source/: hello_classes.cpp
03_many_files/source/: arrow_functions.cpp  point_functions.h
04_static_lib/source/: arrow.h  point_functions.cpp  triangle.h
05_shared_lib/source/: main.cpp
basics/: README.md  building_with_cl.md  building_with_clang.md  hello_world.cpp  tutorial_01.cpp  tutorial_02.cpp  tutorial_02_containers_and_algorithms.cpp  tutorial_04_runtime_game_object_models.cpp
basics/01_hello_world/source/: CMakeLists.txt  meson.build  premake5.lua
basics/02_hello_classes/source/: CMakeLists.txt  meson.build  premake5.lua
basics/03_many_files/source/: CMakeLists.txt  meson.build  premake5.lua
basics/04_static_lib/source/: CMakeLists.txt  meson.build
basics/04_static_lib/source/arrow_lib/: premake5.lua
basics/05_shared_lib/source/: CMakeLists.txt  CMakePresets.json  meson.build  premake5.lua
basics/05_shared_lib/source/arrow_lib/: CMakeLists.txt  meson.build  premake5.lua
basics/05_shared_lib/source/arrow_lib/include/: arrow.h  arrow_functions.h  triangle.h
concurrency/: README.md
concurrency/01_hello_threads/source/: CMakeLists.txt  hello_threads.cpp
concurrency/02_hello_mutex/source/: CMakeLists.txt  hello_mutex.cpp
concurrency/source/: CMakeLists.txt  hello_async.cpp  hello_condition_variable.cpp  hello_mutex.cpp  hello_threads.cpp  tgraphics.h
software_construction_systems/: README.md
software_construction_systems/01_hello_world/source/: CMakeLists.txt  premake5.lua
software_construction_systems/01_single_file/source/: CMakeLists.txt  meson.build
software_construction_systems/02_hello_classes/: SConstruct
software_construction_systems/02_hello_classes/source/: CMakeLists.txt  SConscript
software_construction_systems/02_many_files/source/: arrow_functions.h  point.h
software_construction_systems/03_many_files/source/: SConscript  arrow.cpp  meson.build
software_construction_systems/03_static_lib/source/: CMakeLists.txt  SConscript  meson.build  premake5.lua
software_construction_systems/03_static_lib/source/arrow_lib/: CMakeLists.txt  SConscript  meson.build  premake5.lua
software_construction_systems/04_shared_lib/source/: CMakeLists.txt  CMakePresets.json
software_construction_systems/04_shared_lib/source/arrow_lib/: CMakeLists.txt  SConscript  meson.build  premake5.lua
software_construction_systems/04_shared_lib/source/arrow_lib/include/: point.h
software_construction_systems/04_shared_lib/source/arrow_lib/source/: triangle.cpp
software_construction_systems/04_static_lib/: SConstruct
software_construction_systems/04_static_lib/source/: CMakeLists.txt  SConscript
software_construction_systems/04_static_lib/source/arrow_lib/: SConscript  premake5.lua
software_construction_systems/05_shared_lib/source/: CMakeLists.txt  SConscript
software_construction_systems/05_shared_lib/source/arrow_lib/: CMakeLists.txt  meson.build
software_construction_systems/05_shared_lib/source/arrow_lib/include/: arrow_lib_shared.h  point_functions.h
