
arrow_lib_sources = [
    'sources/arrow_functions.cpp',
    'sources/arrow.cpp',
    'sources/point_functions.cpp',
    'sources/triangle.cpp'
]
arrow_lib_includes = include_directories('includes')

arrow_lib = static_library('arrow_lib',
    arrow_lib_sources,
    include_directories : arrow_lib_includes
)