
arrow_lib_sources = [
    'source/arrow_functions.cpp',
    'source/arrow.cpp',
    'source/point_functions.cpp',
    'source/triangle.cpp'
]
arrow_lib_include = include_directories('include')

arrow_lib = static_library('arrow_lib',
    arrow_lib_sources,
    include_directories : arrow_lib_include
)